--- a/main.css
+++ b/main.css
@@ -1,1 +1,8 @@
 @import "./styles/subheader.css";
+@import "./styles/header.css";
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
