--- a/main.css
+++ b/main.css
@@ -1,3 +1,57 @@
+/* Import Fonts */
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('./fonts/source-sans-pro/SourceSansPro-Regular.eot');
+    src: url('./fonts/source-sans-pro/SourceSansPro-Regular.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/source-sans-pro/SourceSansPro-Regular.woff2') format('woff2'),
+        url('./fonts/source-sans-pro/SourceSansPro-Regular.woff') format('woff'),
+        url('./fonts/source-sans-pro/SourceSansPro-Regular.ttf') format('truetype'),
+        url('./fonts/source-sans-pro/SourceSansPro-Regular.svg#SourceSansPro-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('/fonts/source-sans-pro/SourceSansPro-Bold.eot');
+    src: url('/fonts/source-sans-pro/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/source-sans-pro/SourceSansPro-Bold.woff2') format('woff2'),
+        url('/fonts/source-sans-pro/SourceSansPro-Bold.woff') format('woff'),
+        url('/fonts/source-sans-pro/SourceSansPro-Bold.ttf') format('truetype'),
+        url('/fonts/source-sans-pro/SourceSansPro-Bold.svg#SourceSansPro-Bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('/fonts/montserrat/Montserrat-Regular.eot');
+    src: url('/fonts/montserrat/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/montserrat/Montserrat-Regular.woff2') format('woff2'),
+        url('/fonts/montserrat/Montserrat-Regular.woff') format('woff'),
+        url('/fonts/montserrat/Montserrat-Regular.ttf') format('truetype'),
+        url('/fonts/montserrat/Montserrat-Regular.svg#Montserrat-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('/fonts/montserrat/Montserrat-Bold.eot');
+    src: url('/fonts/montserrat/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/montserrat/Montserrat-Bold.woff2') format('woff2'),
+        url('/fonts/montserrat/Montserrat-Bold.woff') format('woff'),
+        url('/fonts/montserrat/Montserrat-Bold.ttf') format('truetype'),
+        url('/fonts/montserrat/Montserrat-Bold.svg#Montserrat-Bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* Import CSS files */
 @import "./styles/subheader.css";
 @import "./styles/header.css";
 
