--- a/main.css
+++ b/main.css
@@ -14,12 +14,12 @@
 
 @font-face {
     font-family: 'Source Sans Pro';
-    src: url('/fonts/source-sans-pro/SourceSansPro-Bold.eot');
-    src: url('/fonts/source-sans-pro/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/source-sans-pro/SourceSansPro-Bold.woff2') format('woff2'),
-        url('/fonts/source-sans-pro/SourceSansPro-Bold.woff') format('woff'),
-        url('/fonts/source-sans-pro/SourceSansPro-Bold.ttf') format('truetype'),
-        url('/fonts/source-sans-pro/SourceSansPro-Bold.svg#SourceSansPro-Bold') format('svg');
+    src: url('./fonts/source-sans-pro/SourceSansPro-Bold.eot');
+    src: url('./fonts/source-sans-pro/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/source-sans-pro/SourceSansPro-Bold.woff2') format('woff2'),
+        url('./fonts/source-sans-pro/SourceSansPro-Bold.woff') format('woff'),
+        url('./fonts/source-sans-pro/SourceSansPro-Bold.ttf') format('truetype'),
+        url('./fonts/source-sans-pro/SourceSansPro-Bold.svg#SourceSansPro-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -27,12 +27,12 @@
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('/fonts/montserrat/Montserrat-Regular.eot');
-    src: url('/fonts/montserrat/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/montserrat/Montserrat-Regular.woff2') format('woff2'),
-        url('/fonts/montserrat/Montserrat-Regular.woff') format('woff'),
-        url('/fonts/montserrat/Montserrat-Regular.ttf') format('truetype'),
-        url('/fonts/montserrat/Montserrat-Regular.svg#Montserrat-Regular') format('svg');
+    src: url('./fonts/montserrat/Montserrat-Regular.eot');
+    src: url('./fonts/montserrat/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/montserrat/Montserrat-Regular.woff2') format('woff2'),
+        url('./fonts/montserrat/Montserrat-Regular.woff') format('woff'),
+        url('./fonts/montserrat/Montserrat-Regular.ttf') format('truetype'),
+        url('./fonts/montserrat/Montserrat-Regular.svg#Montserrat-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -40,20 +40,20 @@
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('/fonts/montserrat/Montserrat-Bold.eot');
-    src: url('/fonts/montserrat/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/montserrat/Montserrat-Bold.woff2') format('woff2'),
-        url('/fonts/montserrat/Montserrat-Bold.woff') format('woff'),
-        url('/fonts/montserrat/Montserrat-Bold.ttf') format('truetype'),
-        url('/fonts/montserrat/Montserrat-Bold.svg#Montserrat-Bold') format('svg');
+    src: url('./fonts/montserrat/Montserrat-Bold.eot');
+    src: url('./fonts/montserrat/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/montserrat/Montserrat-Bold.woff2') format('woff2'),
+        url('./fonts/montserrat/Montserrat-Bold.woff') format('woff'),
+        url('./fonts/montserrat/Montserrat-Bold.ttf') format('truetype'),
+        url('./fonts/montserrat/Montserrat-Bold.svg#Montserrat-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
 
 /* Import CSS files */
-@import "./styles/subheader.css";
-@import "./styles/header.css";
+@import url("./styles/subheader.css");
+@import url("./styles/header.css");
 
 * {
     margin: 0;
