--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,8 @@
 header {
+    display: flex;
+    max-width: 1440px;
+    width: 100%;
+    justify-content: space-between;
     position: fixed;
+    z-index: 999;
 }
