--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
 @import url("./styles/fonts.css");
 @import url("./styles/subheader.css");
 @import url("./styles/header.css");
+@import url("./styles/content.css");
+@import url("./styles/buttons.css");
+@import url("./styles/footer.css");
 
 * {
     margin: 0;
@@ -14,4 +17,5 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
     font-family: 'Source Sans Pro', sans-serif;
+    font-size: 17px;
 }
