--- a/styles/subheader.css
+++ b/styles/subheader.css
@@ -1,3 +1,9 @@
+.sub-header {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+
 .sub-header video {
     position: absolute;
     top: 0;
@@ -7,3 +13,25 @@
     object-fit: cover;
     z-index: 0;
 }
+
+.sub-header::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: linear-gradient(180deg, rgba(70,70,70,0.27) 0%, rgba(128,128,128,0.27) 100%);
+    z-index: 0;
+}
+
+.site-title {
+    font-size: 36px;
+    font-weight: bold;
+    z-index: 1;
+    text-align: center;
+    color: #fff;
+    position: relative;
+    margin: auto 0;
+}
+
