--- a/main.css
+++ b/main.css
@@ -12,6 +12,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
 }
@@ -19,4 +23,8 @@ h1, h2, h3, h4, h5, h6 {
 p {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 17px;
+}
+
+a {
+    text-decoration: none;
 }
