--- a/styles/subheader.css
+++ b/styles/subheader.css
@@ -28,10 +28,11 @@
 .site-title {
     font-size: 36px;
     font-weight: bold;
-    z-index: 1;
+    z-index: 2;
     text-align: center;
     color: #fff;
     position: relative;
     margin: auto 0;
+    padding: 0 20px;
 }
 
