--- a/styles/subheader.css
+++ b/styles/subheader.css
@@ -26,7 +26,7 @@
 }
 
 .site-title {
-    font-size: 36px;
+    font-size: 30px;
     font-weight: bold;
     z-index: 2;
     text-align: center;
@@ -36,3 +36,7 @@
     padding: 0 20px;
 }
 
+.site-title span {
+    border-right: 3px solid #fff;
+    padding-right: 2px;
+}
