--- a/styles/header.css
+++ b/styles/header.css
@@ -7,7 +7,12 @@ header {
     z-index: 999;
     padding: 20px;
     margin: 0 auto;
-    background-color: #094368;
+    transition: background-color .5s ease-in-out;
+}
+
+header.scrolled {
+  background-color: #094368;
+  transition: background-color .5s ease-in-out;
 }
 
 .logo p {
@@ -46,11 +51,13 @@ header {
   font-size: 18px;
   color: white;
   font-weight: bold;
-  margin-top: -20px;
-  opacity: 0;
-  transition: opacity .5s ease-in-out;
+  padding: 0 0 10px;
+  transition: background-color .5s ease-in-out;
+}
+
+header.scrolled .dropdown-menu {
   background-color: #094368;
-  padding: 10px 0;
+  transition: background-color .5s ease-in-out;
 }
 
 .dropdown-menu li {
@@ -64,7 +71,7 @@ header {
   padding: 2px 20px;
   display: inline-block;
 }
-
+/*
 .dropdown-menu a::before {
   transform: scaleX(0);
   transform-origin: bottom right;
@@ -89,12 +96,10 @@ header {
   z-index: -1;
   transition: transform .3s ease;
 }
-
+*/
 #menuToggle input:checked ~ ul.dropdown-menu {
   display: block;
   position: absolute;
-  opacity: 1;
-  transition: opacity .5s ease-in-out;
 }
 
 .menu-btn__burger {
