--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,6 +3,8 @@
     justify-content: center;
     align-items: center;
     background-image: url("../media/footer-image.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     background-position: center;
     min-height: 517px;
     padding: 0 20px;
@@ -32,10 +34,15 @@
     z-index: 2;
 }
 
+.footer-background-color {
+    background-color: #094368;
+}
+
 .footer-bar {
     display: flex;
     justify-content: space-between;
-    background-color: #094368;
+    max-width: 1440px;
+    margin: 0 auto;
     color: #fff;
     padding: 16px 20px;
     align-items: center;
