--- a/styles/content.css
+++ b/styles/content.css
@@ -88,7 +88,11 @@
     padding: 60px 20px 56px;
 }
 
-.container-article-teaser img {
+.padding-bottom {
+    padding-bottom: 60px;
+}
+
+.container-article-teaser img, .teaser-img img {
     max-width: -webkit-fill-available;
     height: 379px;
     object-fit: cover;
@@ -163,6 +167,10 @@ h2 {
     max-width: -webkit-fill-available;
 }
 
+.dumbo-teaser-img {
+    margin-bottom: 71px;
+}
+
 @media only screen and (min-width: 769px) {
     h2 {
         font-size: 26px;
@@ -183,10 +191,13 @@ h2 {
         justify-content: space-between;
         padding: 90px 20px 101px;
     }
+    .padding-bottom {
+        padding-bottom: 90px;
+    }
     .container-teaser {
         padding: 90px 20px;
     }
-    .container-article-teaser img {
+    .container-article-teaser img, .teaser-img img {
         margin-top: 0;
     }
     .content-column {
@@ -197,11 +208,17 @@ h2 {
         height: 80%;
         object-fit: cover;
     }
+    .dumbo-teaser-img {
+        margin-bottom: 0;
+    }
 }
 
 @media only screen and (min-width: 1025px) {
     .max-width-article {
         padding: 120px 40px 131px;
+    }
+    .padding-bottom {
+        padding-bottom: 120px;
     }
     .container-mobility {
         padding: 120px 40px;
@@ -225,7 +242,7 @@ h2 {
         height: 100%;
         object-fit: cover;
     }
-    .container-article-teaser img {
+    .container-article-teaser img, .teaser-img img {
         max-width: 638px;
         width: 100%;
     }
