--- a/styles/subheader.css
+++ b/styles/subheader.css
@@ -4,6 +4,16 @@
     height: 100vh;
 }
 
+.sub-header img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    z-index: 0;
+}
+
 .sub-header video {
     position: absolute;
     top: 0;
