--- a/styles/slider.css
+++ b/styles/slider.css
@@ -1,39 +1,56 @@
-.img-brooklyn, .img-edge, .img-central-park, .img-zoo {
-    max-width: -webkit-fill-available;
+.img-brooklyn,
+.img-edge,
+.img-central-park,
+.img-zoo {
+  max-width: -webkit-fill-available;
 }
 
 .slick-slide {
-    margin: 0 30px;
+  margin: 0 30px;
+}
+
+.slick-slide img {
+  width: 100%;
+  max-width: 400px;
+  height: 100%;
+  max-height: 400px;
 }
 
 .slick-prev {
-    left: 5px;
-    width: 16px;
-    height: 25.5px;
-    z-index: 1;
+  left: -16px;
+  width: 16px;
+  height: 25.5px;
+  z-index: 1;
 }
 
 .slick-prev::before {
-    display: block;
-    content: '';
-    background-image: url('../media/slider-arrow-left.svg');
-    background-repeat: no-repeat;
-    width: 16px;
-    height: 25.5px;
+  display: block;
+  content: "";
+  background-image: url("../media/slider-arrow-left.svg");
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 25.5px;
 }
 
-.slick-next{
-    right: 5px;
-    width: 16px;
-    height: 25.5px;
-    z-index: 1;
+.slick-next {
+  right: -16px;
+  width: 16px;
+  height: 25.5px;
+  z-index: 1;
 }
 
 .slick-next::before {
-    display: block;
-    content: '';
-    background-image: url('../media/slider-arrow-right.svg');
-    background-repeat: no-repeat;
-    width: 16px;
-    height: 25.5px;
+  display: block;
+  content: "";
+  background-image: url("../media/slider-arrow-right.svg");
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 25.5px;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 709px) {
+  .slick-slide {
+    display: flex !important;
+    justify-content: center;
+  }
 }
